refactor: 將 ecpay 回調 URL 移至環境變量

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,17 @@
-# 应用配置
+# 應用程序設置
 NODE_ENV=development
 PORT=3000
-SESSION_SECRET=your-session-secret
 BASE_URL=http://localhost:3000
 
-# 绿界支付配置
-ECPAY_MERCHANT_ID=2000132
-ECPAY_HASH_KEY=5294y06JbISpM5x9
-ECPAY_HASH_IV=v77hoKGq4kWxNNIS 
+# Session 設置
+SESSION_SECRET=your-secret-key
+
+# 綠界金流設置
+ECPAY_MERCHANT_ID=your_merchant_id
+ECPAY_HASH_KEY=your_hash_key
+ECPAY_HASH_IV=your_hash_iv
+
+# 回調 URL 設置
+RETURN_URL=http://localhost:3000/ecpay/callback
+ORDER_RESULT_URL=http://localhost:3000/ecpay/result
+CLIENT_BACK_URL=http://localhost:3000 
